# pve-switch

./: .env.example  .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
pve_switch/: __init__.py
